--- a/styles/styles.css
+++ b/styles/styles.css
@@ -78,6 +78,7 @@ body {
 
 .random {
   width: 96vw;
+  max-width: 850px;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: 0.8fr 4fr 0.25fr;
@@ -158,6 +159,7 @@ body {
 
 .favorites {
   width: 96vw;
+  max-width: 850px;
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: auto;
@@ -214,6 +216,7 @@ body {
 
 .message {
   grid-column: 1 / 4;
+  text-align: center;
   color: var(--fourth-color);
   text-shadow: 1px 1px 4px var(--third-color);
 }
